--- a/assets/components/base/base.scss
+++ b/assets/components/base/base.scss
@@ -1,18 +1,26 @@
 // TODO: import fonts
 @import "../constants";
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
 
 .b-container {
-    width: 100%;
-    padding:{
-        right: 2rem;
-        left: 2rem;
-    }
+  width: 100%;
+  padding: {
+    right: 1.5rem;
+    left: 1.5rem;
+  }
 
-    @media (min-width: map-get($MEDIA, LG)) {
-        max-width: $MAX-WIDTH;
-        margin: {
-            left: auto;
-            right: auto;
-        }
+  @media (min-width: map-get($MEDIA, SM)) {
+    padding: {
+      right: 2rem;
+      left: 2rem;
     }
+  }
+
+  @media (min-width: map-get($MEDIA, LG)) {
+    max-width: $MAX-WIDTH;
+    margin: {
+      left: auto;
+      right: auto;
+    }
+  }
 }
