--- a/assets/components/catalog-company/catalog-company.scss
+++ b/assets/components/catalog-company/catalog-company.scss
@@ -1,35 +1,41 @@
 @import './../constants';
 
 .catalog-company {
-  background-color: $GREY;
+    background-color: $GREY;
 
-  &__items {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 -.25rem;
-    max-width: initial;
-    padding: 2.5rem 0;
-  }
+    &__items {
+        display: flex;
+        flex-wrap: wrap;
+        max-width: initial;
+        padding: 2.5rem 0;
+        margin: -5rem -.25rem 0;
+        position: relative;
 
-  &__item {
-    padding: .25rem;
-    max-width: 50%;
-    flex: 1 0 50%;
+        @media (min-width: map-get($MEDIA, SM)) {
+            margin: 0 -.25rem;
+        }
 
-    @media (min-width: map-get($MEDIA, SM)) {
-      max-width: 33.333333%;
-      flex: 1 0 33.333333%;
     }
 
-    @media (min-width: map-get($MEDIA, MD)) {
-      max-width: 25%;
-      flex: 1 0 25%;
-    }
+    &__item {
+        padding: .25rem;
+        max-width: 50%;
+        flex: 1 0 50%;
 
-    @media (min-width: map-get($MEDIA, LG)) {
-      max-width: 20%;
-      flex: 1 0 20%;
+        @media (min-width: map-get($MEDIA, SM)) {
+            max-width: 33.333333%;
+            flex: 1 0 33.333333%;
+        }
+
+        @media (min-width: map-get($MEDIA, MD)) {
+            max-width: 25%;
+            flex: 1 0 25%;
+        }
+
+        @media (min-width: map-get($MEDIA, LG)) {
+            max-width: 20%;
+            flex: 1 0 20%;
+        }
     }
-  }
 }
 
