--- a/assets/components/company/company.scss
+++ b/assets/components/company/company.scss
@@ -1,35 +1,68 @@
 @import './../constants';
 
 .company {
-  display: block;
-  border-radius: 4px 4px 0 0;
-  border: 1px solid #ffffff;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.24);
-  height: 100%;
-  transition: all 1s ease-out;
+    display: block;
+    border-radius: 4px 4px 0 0;
+    border: 1px solid $WHITE;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.24);
+    height: 100%;
+    transition: transform .4s ease-out;
 
-  &:hover {
-    transform: scale(1.05);
-  }
-
-  &__img {
-    padding-top: 1.5rem;
-    background-color: white;
-  }
-
-  &__description {
-    display: flex;
-    padding: .5rem;
-    color: #7d8798;
-    font-size: 10px;
-
-    @media (min-width: map-get($MEDIA, SM)) {
-      font-size: 12px;
-      padding: 1rem;
+    &:hover {
+        transform: scale(1.025);
     }
-  }
 
-  &__payment {
-    position: relative;
-  }
+    &__img-wrapper {
+        background-color: $WHITE;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 88px;
+
+        @media (min-width: map-get($MEDIA, SM)) {
+            height: 140px;
+        }
+
+        @media (min-width: map-get($MEDIA, MD)) {
+            height: 150px;
+        }
+
+        @media (min-width: map-get($MEDIA, LG)) {
+            height: 160px;
+        }
+    }
+
+    &__img {
+        max-width: 86%;
+        max-height: 56px;
+
+        @media (min-width: map-get($MEDIA, SM)) {
+            max-height: 80px;
+        }
+
+        @media (min-width: map-get($MEDIA, MD)) {
+            max-height: 88px;
+        }
+
+        @media (min-width: map-get($MEDIA, LG)) {
+            max-height: 98px;
+        }
+    }
+
+    &__info-wrapper {
+        position: relative;
+    }
+
+    &__description {
+        display: flex;
+        padding: 1rem .5rem;
+        color: #7d8798;
+        font-size: 10px;
+
+        @media (min-width: map-get($MEDIA, SM)) {
+            font-size: 12px;
+            padding: 1.5rem 1rem;
+        }
+    }
+
 }
