--- a/assets/components/footer/footer.scss
+++ b/assets/components/footer/footer.scss
@@ -2,7 +2,7 @@
 
 .footer {
   background-color: $WHITE;
-
+  flex: 0 0 auto;
 
   &__logo {
     width: 142px;
@@ -31,7 +31,7 @@
     &__items {
       flex-direction: row;
       justify-content: space-between;
-      padding: 1rem 2rem;
+      padding: 1.75rem 2rem;
     }
 
     &__item-logo {
