--- a/assets/components/payment/payment.scss
+++ b/assets/components/payment/payment.scss
@@ -1,58 +1,70 @@
 @import './../constants';
 
 .payment {
-  display: flex;
+    display: flex;
 
-  &--center {
-    justify-content: center;
-  }
-
-  &--absolute {
-    position: absolute;
-    width: 100%;
-    top: -20px;
-
-    @media (min-width: map-get($MEDIA, SM)) {
-      top: -30px;
+    &--center {
+        justify-content: center;
     }
-  }
 
-  &__item {
-    border: 1px solid #ffffff;
-    border-radius: 50px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-    background-image: radial-gradient(105px 35px at 985.71% 2488.89%, rgba(128, 195, 243, 0.82) 0%, rgba(78, 115, 158, 0.82) 100%);
-    color: $WHITE;
-    padding-top: .25rem;
-    margin: 0 .125rem;
-    text-align: center;
-    width: 22px;
-    height: 22px;
+    &--absolute {
+        position: absolute;
+        width: 100%;
+        top: -14px;
 
-    @media (min-width: map-get($MEDIA, SM)) {
-      width: 40px;
-      height: 40px;
+        @media (min-width: map-get($MEDIA, SM)) {
+            top: -24px;
+        }
     }
-  }
 
-  &__number {
-    font-size: 13px;
-    font-weight: 700;
-    line-height: 9px;
+    &__item {
+        display: flex;
+        flex-direction: column;
+        border: 1px solid #ffffff;
+        border-radius: 50px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+        background-image: radial-gradient(105px 35px at 985.71% 2488.89%, rgba(128, 195, 243, 0.82) 0%, rgba(78, 115, 158, 0.82) 100%);
+        color: $WHITE;
+        padding-top: .25rem;
+        margin: 0 .125rem;
+        text-align: center;
+        width: 22px;
+        height: 22px;
+        font-size: 13px;
+        font-weight: 700;
+        line-height: 8px;
 
-    @media (min-width: map-get($MEDIA, SM)) {
-      font-size: 22px;
-      line-height: 16px;
+        @media (min-width: map-get($MEDIA, SM)) {
+            font-size: 22px;
+            line-height: 15px;
+        }
+
+        &::after {
+            content: "дней";
+            font-size: 4px;
+            font-weight: 700;
+
+            @media (min-width: map-get($MEDIA, SM)) {
+                font-size: 9px;
+            }
+        }
+
+        @media (min-width: map-get($MEDIA, SM)) {
+            width: 38px;
+            height: 38px;
+        }
+
+        &--company{
+            width: 38px;
+            height: 38px;
+            font-size: 22px;
+            line-height: 15px;
+
+            &::after {
+                content: "дней";
+                font-size: 9px;
+                font-weight: 700;
+            }
+        }
     }
-  }
-
-  &__day {
-    font-size: 4px;
-    font-weight: 700;
-
-    @media (min-width: map-get($MEDIA, SM)) {
-      font-size: 9px;
-    }
-  }
-
 }
