--- a/assets/components/category/category.scss
+++ b/assets/components/category/category.scss
@@ -7,7 +7,7 @@
     background: linear-gradient(to bottom, rgba(84, 132, 153, .22), rgba(6, 25, 29, .74));
 
     &--small {
-        transition: background .4s ease-out;
+        transition: all .4s ease-out;
         height: 65px;
         display: flex;
         justify-content: space-between;
@@ -15,13 +15,14 @@
         box-shadow:1px 2px 2px $DARK;
 
         &:hover {
+            transform: scale(1.025);
             background: linear-gradient(to bottom, rgba(243, 128, 134, .67), rgba(153, 64, 64, .67));
         }
 
         .category__img {
             border: none;
             width: auto;
-            height: 150%;
+            height: 100%;
             flex: 1;
         }
 
@@ -37,15 +38,15 @@
     }
 
     &--big {
-        transition: transform .4s ease-out;
+        border: 1px solid white;
+        transition: border-color .4s ease-out;
         &:hover {
-            transform: scale(1.025);
+            border-color: $RED;
         }
     }
 
     &__img {
         display: block;
-        border: 1px solid white;
         width: 100%;
         height: auto;
     }
