--- a/assets/components/header/header.scss
+++ b/assets/components/header/header.scss
@@ -14,7 +14,11 @@
         }
     }
     &__logo {
-        height: 100%;
+        height: 125%;
+
+        @media (min-width: map-get($MEDIA, SM)) {
+            height: 100%;
+        }
     }
 
     &__contacts {
