--- a/assets/components/slider-first/slider-first.scss
+++ b/assets/components/slider-first/slider-first.scss
@@ -6,10 +6,31 @@
     align-items: flex-end;
     margin-top: 200px;
 
+    @media (min-width: map_get($MEDIA, LG)) {
+        margin-top: 350px;
+    }
+
+    @media (min-width: map_get($MEDIA, LLG)) {
+        margin-top: 240px;
+    }
+
+    @media (min-width: map_get($MEDIA, HD)) {
+        margin-top: 340px;
+    }
+
+    @media (min-width: map_get($MEDIA, XL)) {
+        margin-top: 300px;
+    }
+
     &__swiper {
-        max-width: 70%;
-        flex: 1 0 70%;
-        padding-right: 2rem;
+        max-width: 100%;
+        flex: 1 0 100%;
+
+        @media (min-width: map_get($MEDIA, SM)) {
+            max-width: 70%;
+            flex: 1 0 70%;
+            padding-right: 2rem;
+        }
     }
 
     &__rout {
@@ -18,16 +39,15 @@
         flex: 1 0 30%;
         border-left: 2px solid $GRAY-LIGHT;
         padding-left: 2rem;
-        display: flex;
         height: 130px;
         justify-content: center;
         flex-direction: column;
         margin-bottom: 4rem;
+        display: none;
 
-        &--second{
-            height: 280px;
-            margin-bottom: 3rem;
-            justify-content: space-around;
+        @media (min-width: map_get($MEDIA, SM)) {
+            display: flex;
+
         }
     }
 
@@ -37,7 +57,7 @@
 
     &__title {
         width: 120px;
-        font-size: 30px;
+        font-size: 18px;
         color: $DARK-GRAY;
         line-height: 1;
         display: flex;
@@ -51,19 +71,41 @@
         &_deactivated {
             display: none;
         }
+
+        @media (min-width: map_get($MEDIA, MD)) {
+            font-size: 24px;
+
+        }
+
+        @media (min-width: map_get($MEDIA, LG)) {
+            font-size: 30px;
+
+        }
     }
 
     &__item {
         display: flex;
-        margin: 1rem 0;
+        margin: 3rem 0;
         color: $DARK-GRAY;
-        font-size: 18px;
+        font-size: 14px;
+
+
+        @media (min-width: map_get($MEDIA, SM)) {
+            font-size: 18px;
+            margin: 1rem 0;
+        }
     }
 
     &__item-img {
-        width: 50px;
-        height: 40px;
-        margin-right: 3rem;
+        width: 37px;
+        height: 30px;
+        margin-right: 1rem;
+
+        @media (min-width: map_get($MEDIA, SM)) {
+            width: 50px;
+            height: 40px;
+            margin-right: 3rem;
+        }
     }
 
     &__item-description {
@@ -75,10 +117,27 @@
     }
 
     .text {
-        margin-top: 3rem;
+        margin-top: 1rem;
+
+        @media (min-width: map_get($MEDIA, SM)) {
+            margin-top: 3rem;
+        }
 
         &__img {
             width: 100%;
+            display: none;
+
+            @media (min-width: map_get($MEDIA, SM)) {
+                display: block;
+            }
+        }
+
+        &__img-M {
+            display: block;
+
+            @media (min-width: map_get($MEDIA, SM)) {
+                display: none;
+            }
         }
     }
 
@@ -92,8 +151,17 @@
         }
     }
 
+    .swiper-container{
+        padding-bottom: 3rem;
+    }
+
     .swiper-button-next.swiper-button-white {
-        background-image: url("./../../icons/right-arrow-blue.svg");
+
+        background-image: url("./../../icons/arrow-gray.png");
+
+        &:hover{
+            background-image: url("./../../icons/right-arrow-blue.svg");
+        }
 
         &:focus {
             outline: none;
@@ -103,10 +171,10 @@
     .subtitle, .title {
         line-height: .9;
         color: $DARK-BLUE;
-        font-size: 36px;
+        font-size: 22px;
 
-        &--red{
-            color: $RED;
+        @media (min-width: map_get($MEDIA, SM)) {
+            font-size: 36px;
         }
     }
 
@@ -120,9 +188,16 @@
     .title {
         text-transform: uppercase;
         font-weight: bold;
-        font-size: 72px;
+        font-size: 31px;
 
 
+        @media (min-width: map_get($MEDIA, SM)) {
+            font-size: 48px;
+        }
+
+        @media (min-width: map_get($MEDIA, MD)) {
+            font-size: 72px;
+        }
 
     }
 
