--- a/assets/components/slider-second/slider-second.scss
+++ b/assets/components/slider-second/slider-second.scss
@@ -1,8 +1,27 @@
 @import './../constants';
 
-.slider-second{
+.slider-second {
+    display: flex;
+    align-items: center;
+    margin-top: 200px;
 
-    .swiper-pagination{
+    @media (min-width: map_get($MEDIA, MD)) {
+        align-items: flex-end;
+    }
+
+    .swiper-container-horizontal>.swiper-pagination-bullets{
+        bottom: 40px;
+    }
+
+    &__footer {
+        margin-top: 6rem;
+        margin-bottom: 10rem;
+        @media (min-width: map_get($MEDIA, SM)) {
+            margin-bottom: 0;
+        }
+    }
+
+    .swiper-pagination {
         @media (min-width: map_get($MEDIA, SM)) {
             display: none;
         }
@@ -10,5 +29,175 @@
         .swiper-pagination-bullet-active {
             background: $RED;
         }
+    }
+
+    &__swiper {
+        max-width: 100%;
+        flex: 1 0 100%;
+
+        @media (min-width: map_get($MEDIA, SM)) {
+            max-width: 70%;
+            flex: 1 0 70%;
+            padding-right: 2rem;
+        }
+    }
+
+    &__rout {
+        position: relative;
+        max-width: 30%;
+        flex: 1 0 30%;
+        border-left: 2px solid $GRAY-LIGHT;
+        padding-left: 2rem;
+        margin-bottom: 3rem;
+        height: 280px;
+        display: none;
+
+        @media (min-width: map_get($MEDIA, SM)) {
+            display: block;
+
+        }
+    }
+
+    &__rout-wrapper {
+        display: flex;
+        height: 100%;
+        justify-content: space-around;
+        flex-direction: column;
+    }
+
+    &__title {
+        font-size: 18px;
+        color: $DARK-GRAY;
+        line-height: 1;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        &_deactivated {
+            display: none;
+        }
+
+        @media (min-width: map_get($MEDIA, MD)) {
+            font-size: 24px;
+
+        }
+
+        @media (min-width: map_get($MEDIA, LG)) {
+            font-size: 30px;
+
+        }
+    }
+
+    &__title-text {
+        width: 80%;
+    }
+
+    &__arrow {
+        cursor: pointer;
+        display: block;
+        width: 26px;
+        height: 40px;
+        background: url("./../../icons/arrow-gray.png") no-repeat;
+        background-size: contain;
+
+        &:hover {
+            background: url("./../../icons/arrow-red.png") no-repeat;
+            background-size: contain;
+        }
+    }
+
+    &__next-arrow {
+        width: 24px;
+        cursor: pointer;
+    }
+
+    &__item {
+        display: flex;
+        margin: 3rem 0;
+        color: $DARK-GRAY;
+        font-size: 14px;
+
+        @media (min-width: map_get($MEDIA, SM)) {
+            font-size: 18px;
+            margin: 1rem 0;
+        }
+    }
+
+    &__item-img {
+        width: 37px;
+        height: 30px;
+        margin-right: 1rem;
+
+        @media (min-width: map_get($MEDIA, SM)) {
+            width: 50px;
+            height: 40px;
+            margin-right: 3rem;
+        }
+    }
+
+    &__item-description {
+        flex: 1;
+    }
+
+    .subtitle, .title {
+        line-height: .9;
+        color: $RED;
+        font-size: 22px;
+
+        @media (min-width: map_get($MEDIA, SM)) {
+            font-size: 36px;
+        }
+    }
+
+    .subtitle {
+        &--gray {
+            color: $DARK-GRAY;
+            line-height: 1.1;
+        }
+    }
+
+    .title {
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 31px;
+
+        @media (min-width: map_get($MEDIA, SM)) {
+            font-size: 48px;
+        }
+
+        @media (min-width: map_get($MEDIA, MD)) {
+            font-size: 72px;
+        }
+    }
+
+    .text {
+        margin-top: 1rem;
+
+        @media (min-width: map_get($MEDIA, SM)) {
+            margin-top: 3rem;
+        }
+
+        &__img {
+            width: 100%;
+            display: none;
+
+            @media (min-width: map_get($MEDIA, SM)) {
+                display: block;
+            }
+        }
+
+        &__img-M {
+            display: block;
+            padding: 1rem 7vw;
+            margin-bottom: 2rem;
+
+            @media (min-width: map_get($MEDIA, SM)) {
+                display: none;
+            }
+        }
+    }
+
+    .swiper-container {
+        padding-bottom: 3rem;
     }
 }
