--- a/assets/components/_reset.scss
+++ b/assets/components/_reset.scss
@@ -50,3 +50,13 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+a{
+    text-decoration: none;
+}
+
+input, textarea{
+    border: none;
+    border-radius: 0;
+    margin: 0;
+}
