--- a/assets/components/modal/modal.scss
+++ b/assets/components/modal/modal.scss
@@ -2,15 +2,38 @@
 
 .modal{
     width: 100%;
-    padding: 2rem;
+    padding: 3rem 1.5rem;
     color: $WHITE;
 
+    &__header{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 1rem;
+    }
+
+    &__close{
+        width: 42px;
+        height: 42px;
+        padding: 8px;
+
+        @media (min-width: map_get($MEDIA, SM)) {
+            padding: 0;
+            width: 24px;
+            height: 24px;
+            cursor: pointer;
+        }
+    }
 
     &__title{
         text-transform: uppercase;
-        font-size: 24px;
+        font-size: 20px;
         font-weight: bold;
-        margin-bottom: 1rem;
+
+
+        @media (min-width: map_get($MEDIA, SM)) {
+            font-size: 24px;
+        }
     }
 
     &__item{
@@ -49,6 +72,11 @@
             .modal__item-label{
                 font-size: 14px;
                 margin-bottom: 0;
+                transition: color .8s;
+
+                &--error{
+                    color: $RED;
+                }
             }
 
             input[type="checkbox"]{
