--- a/assets/components/iskra/iskra.scss
+++ b/assets/components/iskra/iskra.scss
@@ -4,7 +4,7 @@
     position: absolute;
     width: 50%;
     height: 50vh;
-    top:0;
+    top:102vw;
 
     &--1{
         left: 0;
@@ -12,7 +12,7 @@
 
     &--2{
         right: 0;
-        top:10vh;
+        top:102vw;
     }
 
     &--3{
@@ -20,11 +20,32 @@
     }
 
     &--4{
-        right: 0;
-        top:20vh;
+        right: 10vw;
+        top:140vw;
     }
 
     @media (min-width: map-get($MEDIA, SM)) {
+
+        top:0;
+
+        &--1{
+            left: 0;
+        }
+
+        &--2{
+            right: 0;
+            top:10vh;
+        }
+
+        &--3{
+            left: 0;
+        }
+
+        &--4{
+            right: 0;
+            top:20vh;
+        }
+
     }
 
     @media (min-width: map-get($MEDIA, MD)) {
