--- a/assets/components/slider-second/slider-second.scss
+++ b/assets/components/slider-second/slider-second.scss
@@ -67,8 +67,8 @@
         flex: 1 0 30%;
         border-left: 2px solid $GRAY-LIGHT;
         padding-left: 2rem;
-        margin-bottom: 3rem;
-        height: 280px;
+        margin-bottom: 6rem;
+        height: 240px;
         display: none;
 
         @media (min-width: map_get($MEDIA, SM)) {
@@ -107,7 +107,7 @@
         }
 
         @media (min-width: map_get($MEDIA, LG)) {
-            font-size: 30px;
+            font-size: 26px;
 
         }
     }
@@ -215,7 +215,7 @@
             display: block;
             padding: 1rem 7vw;
             margin-bottom: 2rem;
-
+            width: 100%;
             @media (min-width: map_get($MEDIA, SM)) {
                 display: none;
             }
