--- a/assets/components/base/base.scss
+++ b/assets/components/base/base.scss
@@ -1,6 +1,6 @@
 // TODO: import fonts
 @import "../constants";
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700');
 
 body {
     font-family: 'Open Sans', sans-serif;
@@ -12,6 +12,10 @@ body {
 
 .text-red {
     color: $RED;
+}
+
+.text-bold{
+    font-weight: 600;
 }
 
 .b-container {
