--- a/assets/components/company/company.scss
+++ b/assets/components/company/company.scss
@@ -6,10 +6,11 @@
     border: 1px solid $WHITE;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.24);
     height: 100%;
-    transition: transform .4s ease-out;
+    transition: all .4s ease-out;
 
     &:hover {
         transform: scale(1.025);
+        box-shadow: 0 3px 9px rgba($RED, .75);
     }
 
     &__img-wrapper {
