update after bugs

--- a/assets/components/_constants.scss
+++ b/assets/components/_constants.scss
@@ -72,7 +72,7 @@ $MEDIA: (
             top: -50px;
             height: 100px;
             width: 132px;
-            background: url("./../icons/mt-red.svg") no-repeat;
+            background: url("./../icons/mt-red.png") no-repeat;
             background-size: contain;
         }
     }
@@ -86,7 +86,7 @@ $MEDIA: (
             top: -50px;
             height: 100px;
             width: 132px;
-            background: url("./../icons/mt-blue.svg") no-repeat;
+            background: url("./../icons/mt-blue.png") no-repeat;
             background-size: contain;
         }
     }
@@ -100,7 +100,7 @@ $MEDIA: (
             top: -50px;
             height: 100px;
             width: 132px;
-            background: url("./../icons/mt-gray.svg") no-repeat;
+            background: url("./../icons/mt-gray.png") no-repeat;
             background-size: contain;
         }
     }
