--- a/assets/components/molotok-bottom/molotok-bottom.scss
+++ b/assets/components/molotok-bottom/molotok-bottom.scss
@@ -36,13 +36,12 @@
 
         &__img{
             position: initial;
-            width: initial;
-            max-width: 100%;
+            width: 100%;
         }
     }
 
     @media (min-width: map-get($MEDIA, LG)) {
-        top: -196px;
+        top: -195px;
         width: 1000px;
     }
 
